// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots More info Default 1`] = `
.c3 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c3 .farmblocks-icon {
  display: block;
}

.c2 {
  position: relative;
  display: inline-block;
}

.c2 .hit-area {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c2 .appear-enter {
  opacity: 0;
}

.c2 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c2 .appear-exit {
  opacity: 1;
}

.c2 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: 600;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c0 .icon {
  display: inline-block;
  margin: 0 4px;
  cursor: pointer;
  color: #59636f;
}

.c0 .icon .farmblocks-icon {
  font-size: 1.2em;
}

.c0 .icon:hover,
.c0 .hovered {
  color: #3498db;
}

@media only screen and (pointer:coarse) {
  .c2 .hit-area {
    min-height: 40px;
    min-width: 40px;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      fontWeight="title"
      size={16}
      type="#59636f"
    >
      <span
        className="text "
      >
        Mouse over the icon for more info
      </span>
      <div
        className="c2 icon"
        onMouseLeave={[Function]}
      >
        <div
          className="hit-area"
          onMouseOver={[Function]}
        />
        <span
          className="c3"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height={16}
            viewBox="2 2 20 20"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2Zm0 2a8 8 0 1 0 0 16 8 8 0 0 0 0-16Zm-.354 10.594c.736 0 1.28.517 1.28 1.189v.028c0 .671-.544 1.189-1.28 1.189-.735 0-1.28-.518-1.28-1.19v-.027c0-.672.545-1.189 1.28-1.189ZM11.941 7C14.058 7 15.5 8.035 15.5 9.895v.028c0 1.776-1.295 2.504-2.899 2.812l-.044.251a.807.807 0 0 1-.793.685h-.118a.794.794 0 0 1-.793-.685l-.148-.951c-.073-.462.206-.784.676-.84 1.28-.152 1.869-.53 1.869-1.216v-.028c0-.628-.501-.992-1.354-.992-.632 0-1.177.18-1.705.558a1.166 1.166 0 0 1-.663.224c-.558 0-1.028-.447-1.028-.978 0-.266.116-.546.381-.756C9.661 7.392 10.647 7 11.941 7Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots More info Without text - tooltip left aligned 1`] = `
.c3 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c3 .farmblocks-icon {
  display: block;
}

.c2 {
  position: relative;
  display: inline-block;
}

.c2 .hit-area {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c2 .appear-enter {
  opacity: 0;
}

.c2 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c2 .appear-exit {
  opacity: 1;
}

.c2 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: 600;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c0 .icon {
  display: inline-block;
  margin: 0 4px;
  cursor: pointer;
  color: #59636f;
}

.c0 .icon .farmblocks-icon {
  font-size: 1.2em;
}

.c0 .icon:hover,
.c0 .hovered {
  color: #3498db;
}

@media only screen and (pointer:coarse) {
  .c2 .hit-area {
    min-height: 40px;
    min-width: 40px;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      fontWeight="title"
      size={16}
      type="#59636f"
    >
      <span
        className="text "
      />
      <div
        className="c2 icon"
        onMouseLeave={[Function]}
      >
        <div
          className="hit-area"
          onMouseOver={[Function]}
        />
        <span
          className="c3"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height={16}
            viewBox="2 2 20 20"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2Zm0 2a8 8 0 1 0 0 16 8 8 0 0 0 0-16Zm-.354 10.594c.736 0 1.28.517 1.28 1.189v.028c0 .671-.544 1.189-1.28 1.189-.735 0-1.28-.518-1.28-1.19v-.027c0-.672.545-1.189 1.28-1.189ZM11.941 7C14.058 7 15.5 8.035 15.5 9.895v.028c0 1.776-1.295 2.504-2.899 2.812l-.044.251a.807.807 0 0 1-.793.685h-.118a.794.794 0 0 1-.793-.685l-.148-.951c-.073-.462.206-.784.676-.84 1.28-.152 1.869-.53 1.869-1.216v-.028c0-.628-.501-.992-1.354-.992-.632 0-1.177.18-1.705.558a1.166 1.166 0 0 1-.663.224c-.558 0-1.028-.447-1.028-.978 0-.266.116-.546.381-.756C9.661 7.392 10.647 7 11.941 7Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots More info Without text - tooltip right aligned 1`] = `
.c3 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c3 .farmblocks-icon {
  display: block;
}

.c2 {
  position: relative;
  display: inline-block;
}

.c2 .hit-area {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c2 .appear-enter {
  opacity: 0;
}

.c2 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c2 .appear-exit {
  opacity: 1;
}

.c2 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: 600;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c0 .icon {
  display: inline-block;
  margin: 0 4px;
  cursor: pointer;
  color: #59636f;
}

.c0 .icon .farmblocks-icon {
  font-size: 1.2em;
}

.c0 .icon:hover,
.c0 .hovered {
  color: #3498db;
}

@media only screen and (pointer:coarse) {
  .c2 .hit-area {
    min-height: 40px;
    min-width: 40px;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
  }
}

<div
  style={
    Object {
      "marginLeft": "200px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      fontWeight="title"
      size={16}
      type="#59636f"
    >
      <span
        className="text "
      />
      <div
        className="c2 icon"
        onMouseLeave={[Function]}
      >
        <div
          className="hit-area"
          onMouseOver={[Function]}
        />
        <span
          className="c3"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height={16}
            viewBox="2 2 20 20"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2Zm0 2a8 8 0 1 0 0 16 8 8 0 0 0 0-16Zm-.354 10.594c.736 0 1.28.517 1.28 1.189v.028c0 .671-.544 1.189-1.28 1.189-.735 0-1.28-.518-1.28-1.19v-.027c0-.672.545-1.189 1.28-1.189ZM11.941 7C14.058 7 15.5 8.035 15.5 9.895v.028c0 1.776-1.295 2.504-2.899 2.812l-.044.251a.807.807 0 0 1-.793.685h-.118a.794.794 0 0 1-.793-.685l-.148-.951c-.073-.462.206-.784.676-.84 1.28-.152 1.869-.53 1.869-1.216v-.028c0-.628-.501-.992-1.354-.992-.632 0-1.177.18-1.705.558a1.166 1.166 0 0 1-.663.224c-.558 0-1.028-.447-1.028-.978 0-.266.116-.546.381-.756C9.661 7.392 10.647 7 11.941 7Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots More info extended style 1`] = `
.c4 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c4 .farmblocks-icon {
  display: block;
}

.c3 {
  position: relative;
  display: inline-block;
}

.c3 .hit-area {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c3 .appear-enter {
  opacity: 0;
}

.c3 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c3 .appear-exit {
  opacity: 1;
}

.c3 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: 600;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c0 .icon {
  display: inline-block;
  margin: 0 4px;
  cursor: pointer;
  color: #59636f;
}

.c0 .icon .farmblocks-icon {
  font-size: 1.2em;
}

.c0 .icon:hover,
.c0 .hovered {
  color: #3498db;
}

.c1 .text {
  font-family: serif;
}

.c1 .icon {
  position: relative;
}

.c1 .icon svg {
  visibility: hidden;
}

.c1 .icon .hit-area {
  z-index: 1;
}

.c1 .icon::before {
  content: '🤔';
  position: absolute;
  top: 0;
}

.c1 .icon.tooltip {
  width: 250px;
  white-space: pre-line;
  text-align: center;
}

@media only screen and (pointer:coarse) {
  .c3 .hit-area {
    min-height: 40px;
    min-width: 40px;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
  }
}

<div>
  <div
    className="c0 c1"
  >
    <div
      className="c2"
      fontWeight="title"
      size={16}
      type="#59636f"
    >
      <span
        className="text "
      >
        How much wood could a woodchuck chuck if a woodchuck could chuck wood?
      </span>
      <div
        className="c3 icon"
        onMouseLeave={[Function]}
      >
        <div
          className="hit-area"
          onMouseOver={[Function]}
        />
        <span
          className="c4"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height={16}
            viewBox="2 2 20 20"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2Zm0 2a8 8 0 1 0 0 16 8 8 0 0 0 0-16Zm-.354 10.594c.736 0 1.28.517 1.28 1.189v.028c0 .671-.544 1.189-1.28 1.189-.735 0-1.28-.518-1.28-1.19v-.027c0-.672.545-1.189 1.28-1.189ZM11.941 7C14.058 7 15.5 8.035 15.5 9.895v.028c0 1.776-1.295 2.504-2.899 2.812l-.044.251a.807.807 0 0 1-.793.685h-.118a.794.794 0 0 1-.793-.685l-.148-.951c-.073-.462.206-.784.676-.84 1.28-.152 1.869-.53 1.869-1.216v-.028c0-.628-.501-.992-1.354-.992-.632 0-1.177.18-1.705.558a1.166 1.166 0 0 1-.663.224c-.558 0-1.028-.447-1.028-.978 0-.266.116-.546.381-.756C9.661 7.392 10.647 7 11.941 7Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;
